put some more info in

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Berwin Lan</title>
     <meta name="keywords" content="computing, aerospace, machine learning, ethics, engineering">
-    <meta name="description" content="First-year at Olin College interested in the aerospace industry and the intersection between ethics and machine learning. Actively seeking opportunities to expand my skills in a professional setting.">
+    <meta name="description" content="First-year at Olin College interested in aerospace and the intersection between ethics and machine learning. Actively seeking opportunities to expand my skills in a professional setting.">
     <meta name="author" content="Berwin Lan">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
@@ -19,14 +19,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body style="background-color: #f5f6fa">
+<body style="background-color: #ffe9de">
     <div>
         <div class="row">
             <div id="profileColumn" class="col s12 l4 center">
-                <img id="profileImage" src="./images/profile.jpg" class="z-depth-3 circle responsive-img" />
+                <img id="profileImage" src="./images/headshot.jpg" class="z-depth-3 circle responsive-img" />
                 
-                <h2 id="heroName" class="center-align">Your Name</h2>
-                <h4 id="description" class="center-align">Some description goes here.</h4>
+                <h2 id="heroName" class="center-align">Berwin Lan</h2>
+                <h4 id="description" class="center-align">First-year at Olin College interested in aerospace and the intersection between ethics and machine learning. Actively seeking opportunities to expand my skills in a professional setting.</h4>
 
                 <div id="socialLinkSection">
                     <section class="tab">
