--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link type="text/css" rel="stylesheet" href="css/index.css" media="screen,projection" />
     <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
     <!-- Put your favicon here! (I highly suggest realfavicongenerator.net) -->
-    <meta name="theme-color" content="#f79665">
+    <meta name="theme-color" content="#55c0f2">
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:500,600,700" rel="stylesheet">
     <!-- If you want Google Analytics, do some Google searching, and pop it here. -->
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body style="background-color: #ffe9de">
+<body style="background-color: #ade4ff">
     <div>
         <div class="row">
             <div id="profileColumn" class="col s12 l4 center">
