updated blurb fr

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img id="profileImage" src="./images/headshot.jpg" class="z-depth-3 circle responsive-img" />
                 
                 <h2 id="heroName" class="center-align">Berwin Lan</h2>
-                <h4 id="description" class="center-align">First-year at Olin College interested in aerospace and the intersection between ethics and machine learning. Actively seeking opportunities to expand my skills in a professional setting.</h4>
+                <h4 id="description" class="center-align">First-year at Olin College passionate about all things aerospace and ethics/ML. Actively seeking opportunities to expand my skills in a professional setting.</h4>
 
                 <div id="socialLinkSection">
                     <section class="tab">
