--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Berwin Lan</title>
     <meta name="keywords" content="computing, aerospace, machine learning, ethics, engineering">
-    <meta name="description" content="First-year at Olin College passionate about all things aerospace and ethics/ML. Actively seeking opportunities to expand my skills in a professional setting.">
+    <meta name="description" content="First-year at Olin College passionate about all things aerospace and the intersection of ethics/ML. Actively seeking opportunities to expand my skills in a professional setting.">
     <meta name="author" content="Berwin Lan">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
@@ -26,7 +26,7 @@
                 <img id="profileImage" src="./images/headshot.jpg" class="z-depth-3 circle responsive-img" />
                 
                 <h2 id="heroName" class="center-align">Berwin Lan</h2>
-                <h4 id="description" class="center-align">First-year at Olin College passionate about all things aerospace and ethics/ML. Actively seeking opportunities to expand my skills in a professional setting.</h4>
+                <h4 id="description" class="center-align">First-year at Olin College passionate about all things aerospace and the intersection of ethics/ML. Actively seeking opportunities to expand my skills in a professional setting.</h4>
 
                 <div id="socialLinkSection">
                     <section class="tab">
