added more metadata

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Berwin Lan</title>
-    <meta name="keywords" content="computing, aerospace, machine learning, ethics, engineering">
+    <meta name="keywords" content="computing, aerospace, machine learning, ethics, engineering, berwin, lan, berwin lan, olin, olin college">
     <meta name="description" content="First-year at Olin College passionate about all things aerospace and the intersection of ethics/ML. Actively seeking opportunities to expand my skills in a professional setting.">
     <meta name="author" content="Berwin Lan">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
